<resources>
    <string name="app_name">ContactsApp</string>
    <string name="contacts_app">Contacts App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="contact">Contact</string>
    <string name="no_details_found">No Details Found</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter first name..</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter last name..</string>
    <string name="mobile">Mobile</string>
    <string name="enter_mobile_no">Enter mobile no..</string>
    <string name="email">Email</string>
    <string name="email_small">email</string>
    <string name="enter_email">Enter email..</string>
    <string name="message">message</string>
    <string name="call">call</string>
    <string name="favourite">favourite</string>
    <string name="no_contacts_found">No Contacts Found</string>
    <string name="add_contact">Add Contact</string>
    <string name="done">Done</string>

</resources>
