<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addcontact.AddContactActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/content_toolbar" />

    <FrameLayout
        android:id="@+id/fl_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorAccentLight"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginStart="40dp"
            android:src="@drawable/camera" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fl_profile"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="40"
                android:padding="10dp"
                android:text="@string/first_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/enter_first_name"
                android:imeOptions="flagNoExtractUi"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="40"
                android:padding="10dp"
                android:text="@string/last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:background="@null"
                android:inputType="text"
                android:hint="@string/enter_last_name"
                android:imeOptions="flagNoExtractUi"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="40"
                android:padding="10dp"
                android:text="@string/mobile"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:background="@null"
                android:inputType="phone"
                android:hint="@string/enter_mobile_no"
                android:imeOptions="flagNoExtractUi"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="40"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email"
                android:imeOptions="flagNoExtractUi"
                android:padding="10dp"
                android:singleLine="true"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>