<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addcontact.AddContactActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/content_toolbar" />

    <LinearLayout
        android:id="@+id/ll_profile_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:padding="10dp"
        android:background="@color/colorAccentLight"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic" />

        <TextView
            android:id="@+id/tv_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:orientation="horizontal">

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
            <!--<ImageView-->
                <!--android:src="@drawable/message_icon"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->
             <TextView
                 android:text="@string/message"
                 android:gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableTop="@drawable/message_icon"/>
        </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="5dp">
                <!--<ImageView-->
                    <!--android:src="@drawable/call_icon"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <TextView
                    android:text="@string/call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawableTop="@drawable/call_icon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="10dp">
                <!--<ImageView-->
                    <!--android:src="@drawable/email_icon"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <TextView
                    android:text="@string/email_small"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/email_icon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <!--<ImageView-->
                    <!--android:src="@drawable/favourite_icon"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->
                <TextView
                    android:text="@string/favourite"
                    android:gravity="center"
                    android:drawableTop="@drawable/favourite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_profile_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_profile_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="40"
                android:padding="10dp"
                android:text="@string/mobile"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:padding="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="40"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:padding="10dp"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_details"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/no_details_found"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>